--- a/JavaScript/vueJS/bankproject/.env
+++ b/JavaScript/vueJS/bankproject/.env
@@ -1,1 +1,2 @@
 VUE_APP_FB_KEY = AIzaSyBDRyGSSYisIWQOxF5qA3SCblcPOrQR62A
+VUE_APP_FB_URL = https://vue-bank-project-masya-default-rtdb.europe-west1.firebasedatabase.app 
