--- a/JavaScript/vueJS/bankproject/package.json
+++ b/JavaScript/vueJS/bankproject/package.json
@@ -13,13 +13,17 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@vueform/slider": "^2.1.2",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
+    "maska": "^1.5.0",
     "sass": "^1.54.4",
     "sass-loader": "^13.0.2",
     "vee-validate": "^4.5.8",
     "vue": "^3.2.13",
     "vue-router": "^4.1.3",
+    "vuejs-paginate-next": "^1.0.2",
     "vuex": "^4.0.2",
     "yup": "^0.32.11"
   },
